--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,51 @@ text-align: center ;
 
 }
 
+
+.m-0{
+
+color: whitesmoke;
+font-family: "Trirong", serif;
+  
+
+}
+
+
+.tcs-custom-container{
+
+  padding: 3.5%;
+  display: block;
+
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,Liberation Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
+
+    
+    -webkit-text-size-adjust: 100%;
+
+    box-sizing: inherit;
+    position: relative !important;
+}
+
+stats-card-value large__size{
+  font-weight: 400;
+  color: #212529 ;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 .description{
 font-family: "Amazon Ember", "Helvetica Neue", Helvetica, Arial, sans-serif;
 color: #111;
