--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,56 @@
  * Facebook: https://fb.com/fh5co
  * URL: https://freehtml5.co
  */
+
+
+
+.mt-4 stats-you-should-know-section{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 20px;
+        margin-top: 40px;
+      }
+
+ 
+
+      .quick-links-list-items {
+        color: white;
+        /* Add any other styles for the links here */
+      }
+
+
+.desktop-footer-section-title{
+
+color: #000;
+}
+.card-body {
+  -webkit-box-flex: 1;
+  flex: 1 1 auto;
+  min-height: 1px;
+}
+
+stats-you-should-know-section .stats-cards-swiper-container .stats-card-swiper-wrapper .stats-card-swiper-slide .stats-card-swiper-slider-card .stats-card-swiper-slider-card-body{
+  background: #000;
+  padding: 2rem;
+}
+.stats-card-swiper-slide {
+  display: inline-block;
+  vertical-align: top;
+  width: 23%; /* Adjust the width as needed */
+}
+.stats-card-swiper-slide:not(:last-child) {
+  margin-right: 20px; /* Adjust the margin as needed */
+}
+
+
+
+
+
+
+
+
+
+ 
 * {
   margin: 0;
   padding: 0; }
